...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/buttonThemeSystem"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="@dimen/padding_small"
                            android:paddingEnd="@dimen/padding_small"
                            android:text="@string/theme_system" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/buttonThemeLight"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="@dimen/padding_small"
                            android:paddingEnd="@dimen/padding_small"
                            android:text="@string/theme_light" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/buttonThemeDark"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingStart="@dimen/padding_small"
                            android:paddingEnd="@dimen/padding_small"
...
