...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/editTextUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/enter_url_to_process"
                        android:inputType="textUri"
                        android:autofillHints="uri"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textViewProcessedUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textColor="@color/black"
                        android:textIsSelectable="true"
                        android:textSize="16sp"
...
